# TGV

./: .gitignore  Cargo.toml  Containerfile  README.md  entrypoint.sh  install.sh  pyproject.toml  setup-firewall.sh  uninstall.sh  yolo.sh
docker/: Dockerfile  network-allowlist.sh
menubar/: Package.swift
menubar/Sources/TGVBar/: TGVBar.swift
src/: app.rs  banner.rs  config.rs  main.rs  server.rs  session.rs  terminal_pane.rs  ui.rs
src/tgv/: __init__.py  banner.py  cli.py  config.py  server.py  session.py  tui.py
xbar/: tgv.30s.sh
