[package]
name = "tgv"
version = "0.1.0"
edition = "2024"
description = "Terminal à Grande Vitesse — remote Claude Code session manager"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal styling + interactive prompts
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Config file (TOML)
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"

