[project]
name = "tgv"
version = "0.1.0"
description = "Terminal à Grande Vitesse — remote Claude Code session manager"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "typer>=0.15.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
tgv = "tgv.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tgv"]
